# lang-check-bot

./: Dockerfile  Readme.md  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
